--- a/.classpath
+++ b/.classpath
@@ -30,7 +30,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly 8.x Runtime">
 		<attributes>
-			<attribute name="owner.project.facets" value="jst.jsf;jst.web;jpt.jpa"/>
+			<attribute name="owner.project.facets" value="jpt.jpa;jst.jsf;jst.web;jst.jaxrs"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
