--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,28 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
-    <url-pattern>/faces/*</url-pattern>
+    <url-pattern>/ui/*</url-pattern>
   </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>Faces Servlet</servlet-name>
+    <url-pattern>*.php</url-pattern>
+  </servlet-mapping>  
+  
+  <error-page>
+  		<exception-type>java.lang.Throwable</exception-type>
+  		<location>/error.jsp</location>
+  </error-page>
+  
+  <error-page>
+  		<error-code>404</error-code>
+  		<location>/404.jsp</location>
+  </error-page>  
+  
+  
+  
+  
+  
+  
+  
 </web-app>
