major architecture refactoring across EJB and JSF backing beans
* all backing beans are @Named
* all templates use unified bootstrap templates
* Factories have been removed
* optimization: data retrieval in backing bean getters was moved to
@PostConstruct methods
* HTTP GET parameters use @Inject @Param with converters
* FacesConverters are now @Named and @Inject DAO objects via OmniFaces
CDI support (http://stackoverflow.com/a/13156834)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
   
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
-    <url-pattern>*.php</url-pattern>
+    <url-pattern>*.do</url-pattern>
   </servlet-mapping>  
   
   <error-page>
